# example-app

./: com.example.GtkApplication.json  meson.build
data/: com.example.GtkApplication.appdata.xml.in  com.example.GtkApplication.desktop.in  com.example.GtkApplication.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: example_app.gresource.xml  main.vala  meson.build  window.ui  window.vala
